Add util functions to create errors #2
