# apps/backend/src/shared/errors/resources.ts
@@ -1,7 +1,0 @@
-/** The name of the resources for replacing on the customizable error message */
-const RESOURCE = {
-    TODO: "Todo",
-    USER: "User",
-} as const
-
-export default RESOURCE
